2009-03-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Hessian/Jacobian handling.
	* src/dummy.cc,
	* src/dummy.hh: Do not use Hessian, Jacobian with Dummy.
	* src/ipopt.cc,
	* src/ipopt.hh: Pass Hessian and Jacobian to Ipopt.
	* src/solver.cc,
	* src/solver.hh: Fix shared API to include Jacobian and Hessian.
	* tests/ipopt.cc: Add Jacobian, Hessian values.
	* tests/simple-test.cc: Do not use an Hessian or a Jacobian.

2009-03-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance constraint handling, add constraints in Ipopt test.
	* src/ipopt.cc: Add default options.
	* src/solver.hh: Fix constructor, add copy constructor.
	* tests/ipopt.cc: Set bounds and constraints.

2009-03-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Compute constraints.
	* src/ipopt.cc: Compute constraints.
	* src/solver.hh: Fix Constraint class attribute naming.

2009-03-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Use constraints bounds.
	* src/ipopt.cc: Use constraint bounds.
	* src/solver.hh: Clean constraints type.

2009-03-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement bounded variable in Solver and IpoptSolver.
	* .gitignore: Do not commit testsuite.log.
	* doc/Doxyfile.in: Do not search for doc in tarballs/packages.
	* doc/Makefile.am: Pass PACKAGE_TARNAME to Doxygen.
	* src/doc.hh: Document detail namespace.
	* src/dummy.cc,
	* src/dummy.hh: Fix documentation.
	* src/ipopt.cc: Implement bounds.
	* src/ipopt.hh: New.
	* src/optimization-fwd.hh: Fix documentation.
	* src/solver.cc,
	* src/solver.hh: Implement bounds.

2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Add constraints definition.
	* src/solver.cc,
	* src/solver.hh: Add types and getter/setter.

2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Add gradient function.
	* src/dummy.cc: Add optional gradient to constructor.
	* src/ipopt.cc: Use gradient in Ipopt if possible.
	* src/solver.cc,
	* src/solver.hh: Handle optional gradient.